--- a/styles/content2.css
+++ b/styles/content2.css
@@ -93,8 +93,10 @@
 }
 #content2 .c3/*imglong*/
 {
-	width:280px;
-	height:580px;
 	float:left;
 	margin-left:30px;
+}
+#content2 .c3 .longimg{
+	width: 280px;
+	height: 580px;
 }
