--- a/styles/content.css
+++ b/styles/content.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 #content
 {
-	height:1800px;
+	/* height:1500px; */
 	width:1200px;
 	background-color:#F9F9F9;
 	border-radius:5px;
